@@ -477,6 +477,39 @@ src_float_to_short_array (const float *in, short *out, int len)
 
 } /* src_float_to_short_array */
 
+void
+src_int_to_float_array (const int *in, float *out, int len)
+{
+	while (len)
+	{	len -- ;
+		out [len] = in [len] / (8.0 * 0x10000000) ;
+		} ;
+
+	return ;
+} /* src_int_to_float_array */
+
+void
+src_float_to_int_array (const float *in, int *out, int len)
+{	float scaled_value ;
+
+	while (len)
+	{	len -- ;
+
+		scaled_value = in [len] * (8.0 * 0x10000000) ;
+		if (CPU_CLIPS_POSITIVE == 0 && scaled_value >= (1.0 * 0x7FFFFFFF))
+		{	out [len] = 0x7fffffff ;
+			continue ;
+			} ;
+		if (CPU_CLIPS_NEGATIVE == 0 && scaled_value <= (-8.0 * 0x10000000))
+		{	out [len] = -1 - 0x7fffffff ;
+			continue ;
+			} ;
+
+		out [len] = lrintf (scaled_value) ;
+		} ;
+
+} /* src_float_to_int_array */
+
 /*==============================================================================
 **	Private functions.
 */
