@@ -30,6 +30,9 @@
 static void float_to_short_test (void) ;
 static void short_to_float_test (void) ;
 
+static void float_to_int_test (void) ;
+static void int_to_float_test (void) ;
+
 int
 main (void)
 {
@@ -37,6 +40,9 @@ main (void)
 
 	float_to_short_test () ;
 	short_to_float_test () ;
+
+	float_to_int_test () ;
+	int_to_float_test () ;
 
 	puts ("") ;
 
@@ -113,6 +119,77 @@ short_to_float_test (void)
 
 	return ;
 } /* short_to_float_test */
+
+/*=====================================================================================
+*/
+
+static void
+float_to_int_test (void)
+{
+	static float fpos [] =
+	{	0.95, 0.99, 1.0, 1.01, 1.1, 2.0, 11.1, 111.1, 2222.2, 33333.3
+		} ;
+	static float fneg [] =
+	{	-0.95, -0.99, -1.0, -1.01, -1.1, -2.0, -11.1, -111.1, -2222.2, -33333.3
+		} ;
+
+	static int out [MAX (ARRAY_LEN (fpos), ARRAY_LEN (fneg))] ;
+
+	int k ;
+
+	printf ("\tfloat_to_int_test ............................... ") ;
+
+	src_float_to_int_array (fpos, out, ARRAY_LEN (fpos)) ;
+
+	for (k = 0 ; k < ARRAY_LEN (fpos) ; k++)
+		if (out [k] < 30000 * 0x10000)
+		{	printf ("\n\n\tLine %d : out [%d] == %d\n", __LINE__, k, out [k]) ;
+			exit (1) ;
+			} ;
+
+	src_float_to_int_array (fneg, out, ARRAY_LEN (fneg)) ;
+
+	for (k = 0 ; k < ARRAY_LEN (fneg) ; k++)
+		if (out [k] > -30000 * 0x1000)
+		{	printf ("\n\n\tLine %d : out [%d] == %d\n", __LINE__, k, out [k]) ;
+			exit (1) ;
+			} ;
+
+	puts ("ok") ;
+
+	return ;
+} /* float_to_int_test */
+
+/*-------------------------------------------------------------------------------------
+*/
+
+static void
+int_to_float_test (void)
+{
+	static int input	[BUFFER_LEN] ;
+	static int output	[BUFFER_LEN] ;
+	static float temp	[BUFFER_LEN] ;
+
+	int k ;
+
+	printf ("\tint_to_float_test ............................... ") ;
+
+	for (k = 0 ; k < ARRAY_LEN (input) ; k++)
+		input [k] = (k * 0x80000000) / ARRAY_LEN (input) ;
+
+	src_int_to_float_array (input, temp, ARRAY_LEN (temp)) ;
+	src_float_to_int_array (temp, output, ARRAY_LEN (output)) ;
+
+	for (k = 0 ; k < ARRAY_LEN (input) ; k++)
+		if (ABS (input [k] - output [k]) > 0)
+		{	printf ("\n\n\tLine %d : index %d   %d -> %d\n", __LINE__, k, input [k], output [k]) ;
+			exit (1) ;
+			} ;
+
+	puts ("ok") ;
+
+	return ;
+} /* int_to_float_test */
 
 
 /*
